add bias methods detail + reference

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -521,3 +521,22 @@
   issn      = "0090-0036, 1541-0048",
   doi       = "10.2105/ajph.2022.306831"
 }
+
+@ARTICLE{Funk2019-vi,
+  title    = "Assessing the performance of real-time epidemic forecasts: A case
+              study of Ebola in the Western Area region of Sierra Leone,
+              2014-15",
+  author   = "Funk, Sebastian and Camacho, Anton and Kucharski, Adam J and
+              Lowe, Rachel and Eggo, Rosalind M and Edmunds, W John",
+  journal  = "PLoS Comput. Biol.",
+  volume   =  15,
+  number   =  2,
+  pages    = "e1006785",
+  month    =  feb,
+  year     =  2019,
+  language = "en",
+  issn     = "1553-734X, 1553-7358",
+  pmid     = "30742608",
+  doi      = "10.1371/journal.pcbi.1006785",
+  pmc      = "PMC6386417"
+}
