--- a/paper/library.bib
+++ b/paper/library.bib
@@ -540,3 +540,18 @@
   doi      = "10.1371/journal.pcbi.1006785",
   pmc      = "PMC6386417"
 }
+
+
+@ARTICLE{Charles2022-ds,
+  title         = "{Seq2Seq} surrogates of epidemic models to facilitate
+                   Bayesian inference",
+  author        = "Charles, Giovanni and Wolock, Timothy M and Winskill, Peter
+                   and Ghani, Azra and Bhatt, Samir and Flaxman, Seth",
+  month         =  sep,
+  year          =  2022,
+  copyright     = "http://creativecommons.org/licenses/by/4.0/",
+  archivePrefix = "arXiv",
+  eprint        = "2209.09617",
+  primaryClass  = "cs.LG",
+  arxivid       = "2209.09617"
+}
